docs(code): fix line numbers alignment

--- a/docs/css/_syntax-highlighting.scss
+++ b/docs/css/_syntax-highlighting.scss
@@ -103,7 +103,6 @@ pre {
   color: #cccccc;
   user-select: none;
   padding: 0 5px;
-  overflow: hidden;
 }
 
 p code, li code, td code {
